updated questionnaire url

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <meta property="og:site_name" content="Thematic" />
   <meta property="og:title" content="Tools for next generation advisors" />
   <meta property="og:image" content="%PUBLIC_URL%/strelica.png" />
-  <meta property="og:url" content="http://www.app.usethematic.com" />
+  <meta property="og:url" content="http://www.app.thematic.com" />
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
